--- a/portofolio.html
+++ b/portofolio.html
@@ -344,6 +344,18 @@
                 </li>
               </ul>
             </div>
+            <div class="newsletter">
+              <form>
+                <h3>Subscribe to the newsletter</h3>
+                <input type="email" name="email" placeholder="E-mail" />
+                <button class="newsletter-button" type="submit">
+                  Subscribe
+                  <svg class="send-icon" width="24" height="24">
+                    <use href="images/icons.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </section>
